chore: add updated images and metadata
add Giscus to blog pages

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@ import SocialIcons from './SocialIcons.astro'
     >
       <div class="flex items-center">
         <p class="text-center text-sm text-muted-foreground">
-          &copy; {new Date().getFullYear()} All rights reserved.
+          &copy; 2020 - {new Date().getFullYear()} Sadman Hossain. Some rights reserved.
         </p>
       </div>
       <SocialIcons links={SOCIAL_LINKS} />
