--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,8 +17,7 @@ const projects = await getCollection('projects')
       <div class="min-w-full">
         <h1 class="mb-4 text-3xl font-bold">Some more about us</h1>
         <p class="prose prose-neutral mb-8 dark:prose-invert">
-          {SITE.TITLE} is an opinionated, no-frills static blogging template built
-          with Astro.
+          {SITE.TITLE}: Sometimes boring explorations into a world of software and beyond.
         </p>
 
         <h2 class="mb-4 text-2xl font-semibold">Our Projects</h2>
