feat: migrate all posts from old blog and update frontmatter from initial commit

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -20,7 +20,7 @@ const { project } = Astro.props
       alt={project.data.name}
       width={400}
       height={200}
-      class="w-full object-cover"
+      class="w-full object-cover rounded-xl"
     />
     <div class="p-4">
       <h3 class="mb-2 text-lg font-semibold">{project.data.name}</h3>
