--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -35,7 +35,7 @@ const authors = await parseAuthors(entry.data.authors ?? [])
             alt={entry.data.title}
             width={1200}
             height={630}
-            class="object-cover"
+            class="object-cover rounded-xl"
           />
         </div>
       )
