--- a/src/components/PostNavigation.astro
+++ b/src/components/PostNavigation.astro
@@ -26,7 +26,7 @@ const { prevPost, nextPost } = Astro.props
     <div class="flex flex-col items-start overflow-hidden">
       <span class="text-left text-xs text-muted-foreground">Next Post</span>
       <span class="w-full truncate text-left text-sm"
-        >{nextPost?.data.title || 'Latest post!'}</span
+        >{nextPost?.data.title || '-'}</span
       >
     </div>
   </Link>
