--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -34,7 +34,7 @@ const postsByYear = page.data.reduce(
 const years = Object.keys(postsByYear).sort((a, b) => parseInt(b) - parseInt(a))
 ---
 
-<Layout title="Blog" description="Blog">
+<Layout title="Posts" description="Blog Posts">
   <Container class="flex grow flex-col gap-y-6">
     <Breadcrumbs
       items={[
