--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,16 +25,16 @@ const blog = (await getCollection('blog'))
     <section>
       <Card>
         <CardHeader>
-          <CardTitle className="text-3xl">er·u·dite</CardTitle>
-          <CardDescription
-            >/ˈer(y)əˌdīt/ &bull; <span class="font-semibold">adjective</span
-            ></CardDescription
-          >
+          <CardTitle className="text-3xl">Sadman Hossain</CardTitle>
+          <CardDescription>
+            Software Engineer Intern &bull; <span class="font-semibold">CPP Investments</span>
+          </CardDescription>
         </CardHeader>
         <CardContent>
           <p class="mb-2 text-sm text-muted-foreground">
-            astro-erudite is an opinionated, no-frills static blogging template
-            built with <Link
+            Sometimes boring explorations into a world of software and beyond.
+
+            <!-- built with <Link
               href="https://astro.build"
               class="text-foreground"
               external
@@ -54,10 +54,10 @@ const blog = (await getCollection('blog'))
               class="text-foreground"
               external
               underline>Astro Micro</Link
-            > theme.
+            > theme. -->
           </p>
           <p class="text-sm text-muted-foreground">
-            To use this template, check out the <Link
+            <!-- To use this template, check out the <Link
               href="https://github.com/jktrn/astro-erudite"
               class="text-foreground"
               underline
@@ -67,7 +67,7 @@ const blog = (await getCollection('blog'))
               href="/blog/the-state-of-static-blogs"
               class="text-foreground"
               underline>The State of Static Blogs in 2024</Link
-            >.
+            >. -->
           </p>
         </CardContent>
       </Card>
