--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -10,7 +10,7 @@ import { cn } from '@/lib/utils'
 
 <Layout title="404" description={SITE.DESCRIPTION}>
   <Container class="flex grow flex-col gap-y-6">
-    <Breadcrumbs items={[{ label: '???', icon: 'lucide:circle-help' }]} />
+    <Breadcrumbs items={[{ label: 'Not Found', icon: 'lucide:circle-help' }]} />
 
     <section
       class="flex flex-col items-center justify-center gap-y-4 text-center"
