feat: update links from /blog to /posts

--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -8,11 +8,11 @@ import type { CollectionEntry } from 'astro:content'
 import Link from './Link.astro'
 
 type Props = {
-  entry: CollectionEntry<'blog'>
+  entry: CollectionEntry<'posts'>
 }
 
 const { entry } = Astro.props as {
-  entry: CollectionEntry<'blog'>
+  entry: CollectionEntry<'posts'>
 }
 
 const formattedDate = formatDate(entry.data.date)
