--- a/src/pages/about/[...slug].astro
+++ b/src/pages/about/[...slug].astro
@@ -20,7 +20,7 @@ type Props = {
 
 const { author } = Astro.props
 
-const allPosts = await getCollection('blog')
+const allPosts = await getCollection('posts')
 const authorPosts = allPosts
   .filter((post) => {
     return post.data.authors && post.data.authors.includes(author.slug)
