--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import { SITE } from '@/consts'
 import Layout from '@/layouts/Layout.astro'
 import { getCollection } from 'astro:content'
 
-const blog = (await getCollection('blog'))
+const posts = (await getCollection('posts'))
   .filter((post) => !post.data.draft)
   .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
   .slice(0, SITE.NUM_POSTS_ON_HOMEPAGE)
@@ -41,7 +41,7 @@ const blog = (await getCollection('blog'))
       <h2 class="text-2xl font-bold">Latest posts</h2>
       <ul class="not-prose flex flex-col gap-y-4">
         {
-          blog.map((post) => (
+          posts.map((post) => (
             <li>
               <BlogCard entry={post} />
             </li>
@@ -50,7 +50,7 @@ const blog = (await getCollection('blog'))
       </ul>
       <div class="flex justify-center">
         <Link
-          href="/blog"
+          href="/posts"
           class={buttonVariants({ variant: 'ghost' }) + ' group'}
         >
           See all posts <span
