--- a/src/components/mdx/GoodreadsGrid.astro
+++ b/src/components/mdx/GoodreadsGrid.astro
@@ -9,8 +9,8 @@ const data = await response.text()
 const result = await xml2js.parseStringPromise(data)
 const books = result.rss.channel[0].item.map((item: any) => {
   const highResImageUrl = item.book_image_url[0]
-    .replace(/(\._SX\d+_|\._SY\d+_)+/g, '._SX200_SY200_')
-    .replace(/(\._SY\d+_)+/g, '._SY200_')
+    .replace(/(\._SX\d+_|\._SY\d+_)+/g, '._SX150_SY150_')
+    .replace(/(\._SY\d+_)+/g, '._SY150_')
 
   return {
     title: item.title[0],
@@ -24,7 +24,11 @@ const books = result.rss.channel[0].item.map((item: any) => {
 })
 
 // Sort books by date_read (latest first)
-books.sort((a: any, b: any) => new Date(b.date_read) - new Date(a.date_read))
+books.sort((a: any, b: any) => {
+  const dateA = new Date(a.date_read);
+  const dateB = new Date(b.date_read);
+  return dateB.getTime() - dateA.getTime();
+})
 
 function formatDate(dateString: any) {
   const monthNames = [
@@ -51,39 +55,58 @@ function formatDate(dateString: any) {
 }
 ---
 
+<style>
+  .line-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+</style>
+
 <div class="goodreads">
   <div class="grid grid-cols-7 gap-0">
-    {
-      books.map((book: any) => (
-        <div class="flex flex-col items-center">
+    {books.map((book: any) => (
+      <div class="flex flex-col items-center">
+        <a
+          href={`https://www.goodreads.com/book/show/${book.book_id}`}
+          class="h-36 w-24"
+        >
+          <img
+            src={book.book_image_url}
+            alt={book.title}
+            class="h-full w-full rounded-md object-cover"
+          />
+        </a>
+        <div class="mt-9 text-center">
           <a
             href={`https://www.goodreads.com/book/show/${book.book_id}`}
-            class="h-36 w-24"
+            class="block w-20 text-xs font-semibold line-clamp-2"
           >
-            <img
-              src={book.book_image_url}
-              alt={book.title}
-              class="h-full w-full rounded-md object-cover"
-            />
+            {book.title}
           </a>
-          <div class="mt-9 text-center">
-            <a
-              href={`https://www.goodreads.com/book/show/${book.book_id}`}
-              class="block w-20 truncate text-xs font-semibold"
-            >
-              {book.title}
-            </a>
-            <span class="block w-20 truncate text-center text-xs text-gray-700 mt-1">
-              {book.author_name}
+          <span class="block w-20 mt-1 text-xs text-gray-700 truncate">
+            {book.author_name}
+          </span>
+          {book.date_read[0] !== '' && (
+            <span class="block text-xs text-gray-700">
+              {formatDate(book.date_read)}
             </span>
-            {book.date_read[0] !== '' && (
-              <span class="block text-xs text-gray-700">
-                {formatDate(book.date_read)}
-              </span>
-            )}
+          )}
+          <div class="flex items-center justify-center mt-1">
+            {Array.from({ length: 5 }, (_, i) => (
+              <svg
+                key={i}
+                class={`h-4 w-4 ${i < book.rating ? 'text-black-500' : 'text-gray-300'}`}
+                fill="currentColor"
+                viewBox="0 0 20 20"
+              >
+                <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.286 3.957a1 1 0 00.95.69h4.163c.969 0 1.371 1.24.588 1.81l-3.37 2.448a1 1 0 00-.364 1.118l1.286 3.957c.3.921-.755 1.688-1.54 1.118l-3.37-2.448a1 1 0 00-1.175 0l-3.37 2.448c-.784.57-1.84-.197-1.54-1.118l1.286-3.957a1 1 0 00-.364-1.118L2.174 9.384c-.783-.57-.38-1.81.588-1.81h4.163a1 1 0 00.95-.69l1.286-3.957z" />
+              </svg>
+            ))}
           </div>
         </div>
-      ))
-    }
+      </div>
+    ))}
   </div>
 </div>
