--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -2,7 +2,7 @@
 import AuthorCard from '@/components/AuthorCard.astro'
 import Breadcrumbs from '@/components/Breadcrumbs.astro'
 import Container from '@/components/Container.astro'
-import GoodreadsGridAuthor from '@/components/mdx/GoodreadsGridAuthor.astro'
+import GoodreadsGrid from '@/components/mdx/GoodreadsGrid.astro'
 import Layout from '@/layouts/Layout.astro'
 import { getCollection } from 'astro:content'
 
@@ -35,6 +35,6 @@ const authors = await getCollection('authors')
       >
       <span class="text-muted-foreground">(Goodreads)</span>
     </h2>
-    <GoodreadsGridAuthor />
+    <GoodreadsGrid titleMarginTop={1} />
   </Container>
 </Layout>
