--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -21,6 +21,7 @@ const iconMap = {
   Threads: 'tabler:brand-threads',
   Mastodon: 'tabler:brand-mastodon',
   Instagram: 'lucide:instagram',
+  Goodreads: 'tabler:book',
   Email: 'lucide:mail',
   RSS: 'lucide:rss',
 }
