--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -27,7 +27,7 @@ const authors = await getCollection('authors')
     }
     <h2 class="text-2xl font-bold">
       <a
-        href="https://www.goodreads.com/review/list/152185079-sadman-hossain?utf8=%E2%9C%93&shelf=read&title=sadman-hossain&per_page=infinite"
+        href="https://www.goodreads.com/review/list/152185079-sadman-hossain?shelf=read&sort=date_read&order=d"
         target="_blank"
         class="underline"
         style="text-underline-offset: 5px;">
