--- a/src/components/ImageGalleryCaption.astro
+++ b/src/components/ImageGalleryCaption.astro
@@ -1,20 +1,20 @@
 ---
 // ImageGalleryCaption.astro
-import { Image } from 'astro:assets';
+import { Image } from 'astro:assets'
 
 export interface ImageData {
-  src: string;
-  caption?: string; // Make caption optional
-  width?: number; // Optional width for remote images
-  height?: number; // Optional height for remote images
+  src: string
+  caption?: string // Make caption optional
+  width?: number // Optional width for remote images
+  height?: number // Optional height for remote images
 }
 
 export interface Props {
-  images: ImageData[];
-  columns: number;
+  images: ImageData[]
+  columns: number
 }
 
-const { images, columns } = Astro.props;
+const { images, columns } = Astro.props
 ---
 
 <style>
@@ -38,19 +38,28 @@ const { images, columns } = Astro.props;
 </style>
 
 <div class="gallery" style={`grid-template-columns: repeat(${columns}, 1fr);`}>
-  {images.map((image) => (
-    <figure>
-      {typeof image.src === 'string' && image.src.startsWith('http') ? (
-        <img class="rounded-xl" src={image.src} alt={image.caption || 'Gallery Image'} width={image.width} height={image.height} />
-      ) : (
-      <Image
-        {...(image as any)}
-        src={image.src}
-        alt={image.caption || 'Gallery Image'}
-        class="rounded-xl"
-      />
-      )}
-      {image.caption ? <figcaption>{image.caption}</figcaption> : null}
-    </figure>
-  ))}
+  {
+    images.map((image) => (
+      <figure>
+        {typeof image.src === 'string' && image.src.startsWith('http') ? (
+          <Image
+            {...(image as any)}
+            src={image.src}
+            alt={image.caption || 'Gallery Image'}
+            width={image.width}
+            height={image.height}
+            class="rounded-xl"
+          />
+        ) : (
+          <Image
+            {...(image as any)}
+            src={image.src}
+            alt={image.caption || 'Gallery Image'}
+            class="rounded-xl"
+          />
+        )}
+        {image.caption ? <figcaption>{image.caption}</figcaption> : null}
+      </figure>
+    ))
+  }
 </div>
