--- a/src/components/mdx/GoodreadsGrid.astro
+++ b/src/components/mdx/GoodreadsGrid.astro
@@ -1,6 +1,5 @@
 ---
 import xml2js from 'xml2js'
-import { Image } from 'astro:assets'
 
 const { titleMarginTop = 1 } = Astro.props;
 const { ratingMarginBottom = 4 } = Astro.props;
@@ -80,7 +79,7 @@ function formatDate(dateString: any) {
             class="h-36 w-24"
             target="_blank"
           >
-            <Image
+            <img
               src={book.book_image_url}
               alt={book.title}
               class="h-full w-full rounded-md object-cover"
