--- a/src/components/ImageGalleryCaption.astro
+++ b/src/components/ImageGalleryCaption.astro
@@ -41,16 +41,9 @@ const { images, columns } = Astro.props
   {
     images.map((image) => (
       <figure>
-        {typeof image.src === 'string' && image.src.startsWith('http') ? (
-          <Image
-            {...(image as any)}
-            src={image.src}
-            alt={image.caption || 'Gallery Image'}
-            width={image.width}
-            height={image.height}
-            class="rounded-xl"
-          />
-        ) : (
+      {typeof image.src === 'string' && image.src.startsWith('http') ? (
+        <img class="rounded-xl" src={image.src} alt={image.caption || 'Gallery Image'} width={image.width} height={image.height} />
+      ) : (
           <Image
             {...(image as any)}
             src={image.src}
